
History
-------

Latest snapshot:
	* storedoc.cgi takes now document from remote host if it unable to fetch it from stored database.
	
26 Jul 2008: 4.50
	* Default value for PopRankSkipSameSite command has been changed to "yes".
	* Possible memory leak has been fixed for a sub-document indexed from stored database.
	* The "strict" option has been added for Section command.
	* A word break has been added for French-style contractions.
	* Big lists of Russian and English synonyms have been added.
	* MaxSiteLevel command accept now a negative argument to group URLs on subdirectory basis.
	* The SkipUnreferred command has been extended to delete unreferred documents if necessary.
	* Del log processing has been fixed in splitter for case when cache log is empty.
	* Some German letters automatically replace by bi-letter combinations in accent-free search mode.
	  Eszett (scharfes S) -> SS, A with diaeresis -> AE, O with diaeresis -> OE, U with diaeresis -> UE.
	* SQLite3 support has been added. Use --with-sqlite3 option for configure to enable it.
	* Indexing has been fixed for documents with several versions in different languages. 
	  You need to execute "indexer -Erehashstored" command when upgrade.
	* HTML parser understands now <!-- google_ad_section_start -->, <!-- google_ad_section_start(weight=ignore) --> and
	  <!-- google_ad_section_end --> comments as tags to include/exclude content for indexing.
	* Relevance calculation has been improved for case when acronyms and abbreviations are used.
	
12 Feb 2008: 4.49
	* String tokenization has been improved. For example, "c--" and "c#" are now cosidered as words.
	* A subdocument indexing technique has been implemented.
	* LongestTextItems command has been added. Use it to specify the number of longest text items to index.
	* The support has been added for georgian-academy and georgian-ps charsets.
	* URL data preloading has been fixed for multi-DBAddr configurations.